video height distortion bug fixed

--- a/assets/scss/content/_download-modal.scss
+++ b/assets/scss/content/_download-modal.scss
@@ -8,12 +8,16 @@
 	}
 
 	img {
-		@keyframes spin {
+		@keyframes jump {
+			from {
+				opacity: 0;
+				transform: translateY(25%);
+			}
 			to {
-				transform: rotate(360deg);
+				transform: translateY(-25%);
 			}
 		}
-		animation: spin 3s infinite forwards linear;
+		animation: jump 0.5s infinite alternate cubic-bezier(0.65, 0, 0.35, 1);
 		width: 40px;
 		height: auto;
 		margin-right: 2em;
