--- a/assets/scss/content/_video-player.scss
+++ b/assets/scss/content/_video-player.scss
@@ -13,6 +13,8 @@
 		height: auto;
 		max-height: 100%;
 		z-index: 1;
+
+		object-fit: cover;
 	}
 
 	.poster {
@@ -46,7 +48,7 @@
 			right: 0;
 			bottom: 0;
 			display: block;
-			background-color: rgba(255,255,255,0.3);
+			background-color: rgba(255, 255, 255, 0.3);
 		}
 	}
 }
